fix: check if a local template is already included and in that case don't append static ones with the same name docs: add github social card to the repo chore: better support for wordpress media

--- a/templates/environments/wordpress/wordpress.mutagen.yml
+++ b/templates/environments/wordpress/wordpress.mutagen.yml
@@ -19,9 +19,7 @@ sync:
         - ".idea"
 
         # Magento files
-        - "/wp-content/media"
-        - "/pub/static/**"
-        - "!/pub/static/.htaccess"
+        - "/wp-content/uploads"
 
     permissions:
       defaultFileMode: "0644"
