--- a/.github/workflows/docker-image-php.yml
+++ b/.github/workflows/docker-image-php.yml
@@ -82,3 +82,19 @@ jobs:
         PHP_VERSION: ${{ matrix.php_version }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
+  wordpress:
+    name: PHP-FPM ${{ matrix.php_version }} (wordpress)
+    runs-on: ubuntu-latest
+    needs: php-fpm
+    strategy:
+      matrix:
+        php_version: ["7.0", "7.1", "7.2", "7.3", "7.4", "8.0"]
+    steps:
+      - uses: actions/checkout@v1
+      - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
+        env:
+          BUILD_GROUP: php-fpm/wordpress
+          PHP_VERSION: ${{ matrix.php_version }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
