feat: support magento multistore with nginx mapping

--- a/images/nginx/context/etc/nginx/available.d/magento2.conf
+++ b/images/nginx/context/etc/nginx/available.d/magento2.conf
@@ -151,6 +151,9 @@ location ~ \.php$ {
     fastcgi_busy_buffers_size 256k;
     fastcgi_read_timeout 3600s;
 
+    fastcgi_param  MAGE_RUN_CODE $MAGE_RUN_CODE;
+    fastcgi_param  MAGE_RUN_TYPE $MAGE_RUN_TYPE;
+
     fastcgi_param  PHP_FLAG  "session.auto_start=off \n suhosin.session.cryptua=off";
     fastcgi_param  PHP_VALUE "memory_limit=756M \n max_execution_time=18000";
 
