--- a/images/nginx/context/etc/nginx/conf.d/default.conf
+++ b/images/nginx/context/etc/nginx/conf.d/default.conf
@@ -13,6 +13,13 @@ map "$http_X_BLACKFIRE_QUERY:$cookie_XDEBUG_SESSION$cookie_XDEBUG_PROFILE$cookie
     default ${NGINX_UPSTREAM_DEBUG_HOST}:${NGINX_UPSTREAM_DEBUG_PORT};
 }
 
+map $http_host $MAGE_RUN_CODE {
+    default "";
+}
+map $http_host $MAGE_RUN_TYPE {
+    default "";
+}
+
 include /etc/nginx/snippets/http-*.conf;
 
 server {
