--- a/images/nginx/context/etc/nginx/available.d/magento1.conf
+++ b/images/nginx/context/etc/nginx/available.d/magento1.conf
@@ -71,8 +71,8 @@ location ~ \.php$ {
     fastcgi_param HTTP_X_REWRITE_URL "";
     fastcgi_param HTTP_X_ORIGINAL_URL "";
 
-    # fastcgi_param MAGE_RUN_CODE $MAGE_RUN_CODE;
-    # fastcgi_param MAGE_RUN_TYPE $MAGE_RUN_TYPE;
+    fastcgi_param MAGE_RUN_CODE $MAGE_RUN_CODE;
+    fastcgi_param MAGE_RUN_TYPE $MAGE_RUN_TYPE;
 
     fastcgi_param SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
     fastcgi_param DOCUMENT_ROOT    $realpath_root;
