feat: resolve the environment's domain to the nginx container from inside the network

--- a/templates/environments/includes/nginx.base.yml
+++ b/templates/environments/includes/nginx.base.yml
@@ -15,3 +15,7 @@ services:
       - ./{{default ".reward/nginx/" .nginx_custom_configs_path}}:/etc/nginx/snippets/
     environment:
       - XDEBUG_CONNECT_BACK_HOST=${XDEBUG_CONNECT_BACK_HOST:-''}
+    networks:
+      default:
+        aliases:
+          - {{.traefik_domain}}
