feat: better support for composer 1/2 feat: default magento 2 version: 2.4.2 chore: optimize docker images slightly

--- a/images/php/cli/Dockerfile
+++ b/images/php/cli/Dockerfile
@@ -31,5 +31,9 @@ RUN set -eux \
 
 ENV COMPOSER_ALLOW_SUPERUSER 1
 ENV COMPOSER_HOME /tmp/composer
-COPY --from=composer:1 /usr/bin/composer /usr/bin/composer
-COPY --from=composer:2 /usr/bin/composer /usr/bin/composer2
+COPY --from=composer:1 /usr/bin/composer /usr/local/bin/composer1
+COPY --from=composer:2 /usr/bin/composer /usr/local/bin/composer2
+
+RUN set -eux \
+    && alternatives --install /usr/bin/composer composer /usr/bin/composer1 99 \
+    && alternatives --install /usr/bin/composer composer /usr/bin/composer2 1
