chore: adminer: use defy/adminer instead of adminer/adminer

--- a/templates/_services/docker-compose.yml
+++ b/templates/_services/docker-compose.yml
@@ -102,7 +102,7 @@ services:
 {{if isEnabledStrict .reward_adminer}}
   adminer:
     container_name: adminer
-    image: adminer
+    image: dehy/adminer
     labels:
       - traefik.enable=true
       - traefik.http.routers.adminer.tls=true
