--- a/templates/environments/magento2/magento2.magepack.windows.yml
+++ b/templates/environments/magento2/magento2.magepack.windows.yml
@@ -1,8 +1,10 @@
 version: "3.5"
 
+{{if not (isEnabledStrict .reward_wsl2_direct_mount)}}
 x-volumes: &volumes
   - .{{default "" .reward_web_root}}/pub/media:/var/www/html/pub/media:cached
   - appdata:/var/www/html
+{{end}}
 
 services:
   magepack: { volumes: *volumes }
