--- a/templates/environments/shopware/shopware.windows.yml
+++ b/templates/environments/shopware/shopware.windows.yml
@@ -1,8 +1,10 @@
 version: "3.5"
 
+{{if not (isEnabledStrict .reward_wsl2_direct_mount)}}
 x-volumes: &volumes
   - .{{default "" .reward_web_root}}/public/media:/var/www/html/public/media:cached
   - appdata:/var/www/html
+{{end}}
 
 x-environment: &environment
   - CHOWN_DIR_LIST=public/media
