--- a/templates/environments/wordpress/wordpress.windows.yml
+++ b/templates/environments/wordpress/wordpress.windows.yml
@@ -1,8 +1,10 @@
 version: "3.5"
 
+{{if not (isEnabledStrict .reward_wsl2_direct_mount)}}
 x-volumes: &volumes
   - .{{default "" .reward_web_root}}/wp-content/uploads:/var/www/html/wp-content/uploads:cached
   - appdata:/var/www/html
+{{end}}
 
 x-environment: &environment
   - CHOWN_DIR_LIST=wp-content/uploads
