chore: php: increase realpath_cache

--- a/images/php-fpm/context/etc/php.d/01-php.ini
+++ b/images/php-fpm/context/etc/php.d/01-php.ini
@@ -6,3 +6,5 @@ display_errors = On
 post_max_size = 25M
 session.auto_start = Off
 upload_max_filesize = 25M
+realpath_cache_size = 10M
+realpath_cache_ttl = 7200
