--- a/images/php-fpm/magento1/Dockerfile
+++ b/images/php-fpm/magento1/Dockerfile
@@ -1,16 +1,15 @@
 ARG PHP_VERSION
-FROM docker.io/rewardenv/php-fpm:${PHP_VERSION}
+FROM rewardenv/php-fpm:${PHP_VERSION}
 USER root
 
-RUN npm install -g grunt-cli gulp yarn
-
-RUN curl -s https://files.magerun.net/n98-magerun.phar > /usr/bin/n98-magerun \
-    && chmod +x /usr/bin/n98-magerun
-
-RUN curl -o /etc/bash_completion.d/n98-magerun.phar.bash \
-        https://raw.githubusercontent.com/netz98/n98-magerun/master/res/autocompletion/bash/n98-magerun.phar.bash
-
-# Create mr alias for n98-magerun
-RUN ln -s /usr/bin/n98-magerun /usr/bin/mr
+RUN set -eux \
+  && npm install -g grunt-cli gulp yarn \
+  && curl -fsSLo /usr/bin/n98-magerun \
+     https://files.magerun.net/n98-magerun.phar \
+  && chmod +x /usr/bin/n98-magerun
+  && curl -fsSLo /etc/bash_completion.d/n98-magerun.phar.bash \
+     https://raw.githubusercontent.com/netz98/n98-magerun/master/res/autocompletion/bash/n98-magerun.phar.bash \
+  # Create mr alias for n98-magerun
+  && ln -s /usr/bin/n98-magerun /usr/bin/mr
 
 USER www-data
