--- a/templates/environments/includes/nginx.base.yml
+++ b/templates/environments/includes/nginx.base.yml
@@ -2,7 +2,9 @@ version: "3.5"
 services:
   nginx:
     hostname: "{{.reward_env_name}}-nginx"
-    image: {{default "docker.io/rewardenv" .reward_docker_image_base}}/nginx:{{default "1.16" .nginx_version}}
+    image: {{default "docker.io/rewardenv" .reward_docker_image_repo}}/nginx:{{default "1.18" .nginx_version}}
+    env_file:
+      - .env
     labels:
       - traefik.enable=true
       - traefik.http.routers.{{.reward_env_name}}-nginx.tls=true
