--- a/.github/workflows/docker-image-php.yml
+++ b/.github/workflows/docker-image-php.yml
@@ -18,9 +18,12 @@ jobs:
       matrix:
         php_version: ["5.5", "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0"]
         include:
+          # PHP 5.5 is not supported on Debian Sury repo anymore
+          - php_version: "5.5"
+            php_variants: "cli fpm cli-loaders fpm-loaders"
           # IonCube and Source Guardian loaders do not yet exist for PHP 8.0
           - php_version: "8.0"
-            php_variants: "cli fpm"
+            php_variants: "cli cli-debian fpm fpm-debian"
     steps:
       - uses: actions/checkout@v1
       - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
@@ -58,11 +61,12 @@ jobs:
     strategy:
       matrix:
         php_version: ["5.5", "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0"]
+        build_group: ["magento1", "magento1-debian"]
     steps:
     - uses: actions/checkout@v1
     - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
       env:
-        BUILD_GROUP: php-fpm/magento1
+        BUILD_GROUP: php-fpm/${{ matrix.build_group }}
         PHP_VERSION: ${{ matrix.php_version }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -74,11 +78,12 @@ jobs:
     strategy:
       matrix:
         php_version: ["7.0", "7.1", "7.2", "7.3", "7.4", "8.0"]
+        build_group: ["magento2", "magento2-debian"]
     steps:
     - uses: actions/checkout@v1
     - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
       env:
-        BUILD_GROUP: php-fpm/magento2
+        BUILD_GROUP: php-fpm/${{ matrix.build_group }}
         PHP_VERSION: ${{ matrix.php_version }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -89,12 +94,30 @@ jobs:
     needs: php-fpm
     strategy:
       matrix:
-        php_version: ["7.0", "7.1", "7.2", "7.3", "7.4", "8.0"]
+        php_version: ["5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0"]
+        build_group: ["wordpress", "wordpress-debian"]
     steps:
       - uses: actions/checkout@v1
       - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
         env:
-          BUILD_GROUP: php-fpm/wordpress
+          BUILD_GROUP: php-fpm/${{ matrix.build_group }}
+          PHP_VERSION: ${{ matrix.php_version }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
+  shopware:
+    name: PHP-FPM ${{ matrix.php_version }} (shopware)
+    runs-on: ubuntu-latest
+    needs: php-fpm
+    strategy:
+      matrix:
+        php_version: ["7.3", "7.4", "8.0"]
+        build_group: ["shopware", "shopware-debian"]
+    steps:
+      - uses: actions/checkout@v1
+      - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
+        env:
+          BUILD_GROUP: php-fpm/${{ matrix.build_group }}
           PHP_VERSION: ${{ matrix.php_version }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
