--- a/images/elasticsearch/6.8/Dockerfile
+++ b/images/elasticsearch/6.8/Dockerfile
@@ -1,3 +1,5 @@
 FROM docker.elastic.co/elasticsearch/elasticsearch:6.8.13
-RUN bin/elasticsearch-plugin install analysis-phonetic \
-    && bin/elasticsearch-plugin install analysis-icu
+
+RUN set -eux \
+  && bin/elasticsearch-plugin install analysis-phonetic \
+  && bin/elasticsearch-plugin install analysis-icu
