--- a/images/elasticsearch/7.8/Dockerfile
+++ b/images/elasticsearch/7.8/Dockerfile
@@ -1,3 +1,5 @@
 FROM docker.elastic.co/elasticsearch/elasticsearch:7.8.1
-RUN bin/elasticsearch-plugin install analysis-phonetic \
-    && bin/elasticsearch-plugin install analysis-icu
+
+RUN set -eux \
+  && bin/elasticsearch-plugin install analysis-phonetic \
+  && bin/elasticsearch-plugin install analysis-icu
