--- a/images/php-fpm/magento1/debug/Dockerfile
+++ b/images/php-fpm/magento1/debug/Dockerfile
@@ -1,11 +1,12 @@
 ARG PHP_VERSION
-FROM docker.io/rewardenv/php-fpm:${PHP_VERSION}-magento1
+
+FROM rewardenv/php-fpm:${PHP_VERSION}-magento1
+
 USER root
 
 RUN set -eux \
-    && yum install -y php-pecl-xdebug \
-    && yum clean all \
-    && rm -rf /var/cache/yum
+  && yum install -y php-pecl-xdebug \
+  && yum clean all && rm -rf /var/cache/yum
 
 COPY debug/etc/*.ini /etc/
 COPY debug/etc/php.d/*.ini /etc/php.d/
