--- a/templates/environments/includes/php-fpm.base.yml
+++ b/templates/environments/includes/php-fpm.base.yml
@@ -16,7 +16,9 @@ services:
 
   php-fpm:
     hostname: "{{.reward_env_name}}-php-fpm"
-    image: {{default "docker.io/rewardenv" .reward_docker_image_base}}/php-fpm:{{default "7.4" .php_version}}{{default "" .reward_svc_php_variant}}
+    image: {{default "docker.io/rewardenv" .reward_docker_image_repo}}/php-fpm:{{default "7.4" .php_version}}{{default "" .reward_svc_php_variant}}{{if (default "" .reward_docker_image_base)}}-{{.reward_docker_image_base}}{{end}}
+    env_file:
+      - .env
     environment:
       - TRAEFIK_DOMAIN
       - TRAEFIK_SUBDOMAIN
@@ -28,7 +30,9 @@ services:
 
   php-debug:
     hostname: "{{.reward_env_name}}-php-debug"
-    image: {{default "docker.io/rewardenv" .reward_docker_image_base}}/php-fpm:{{default "7.4" .php_version}}{{default "" .reward_svc_php_variant}}-debug
+    image: {{default "docker.io/rewardenv" .reward_docker_image_repo}}/php-fpm:{{default "7.4" .php_version}}{{default "" .reward_svc_php_variant}}-debug{{if (default "" .reward_docker_image_base)}}-{{.reward_docker_image_base}}{{end}}
+    env_file:
+      - .env
     environment:
       - TRAEFIK_DOMAIN
       - TRAEFIK_SUBDOMAIN
