--- a/images/php-fpm/magento1/Dockerfile
+++ b/images/php-fpm/magento1/Dockerfile
@@ -6,7 +6,7 @@ RUN set -eux \
   && npm install -g grunt-cli gulp yarn \
   && curl -fsSLo /usr/bin/n98-magerun \
      https://files.magerun.net/n98-magerun.phar \
-  && chmod +x /usr/bin/n98-magerun
+  && chmod +x /usr/bin/n98-magerun \
   && curl -fsSLo /etc/bash_completion.d/n98-magerun.phar.bash \
      https://raw.githubusercontent.com/netz98/n98-magerun/master/res/autocompletion/bash/n98-magerun.phar.bash \
   # Create mr alias for n98-magerun
