--- a/images/nginx/1.16/Dockerfile
+++ b/images/nginx/1.16/Dockerfile
@@ -21,12 +21,9 @@ ENV NGINX_PUBLIC                  ''
 ENV NGINX_TEMPLATE                application.conf
 ENV XDEBUG_CONNECT_BACK_HOST      '""'
 
-COPY etc/nginx/fastcgi_params /etc/nginx/fastcgi_params.template
-COPY etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf.template
-COPY etc/nginx/available.d/*.conf /etc/nginx/available.d/
+COPY ./etc/. /etc/
 
-CMD envsubst < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf \
-  && envsubst < /etc/nginx/fastcgi_params.template > /etc/nginx/fastcgi_params \
+CMD find /etc/nginx -name '*.template' -exec sh -c 'envsubst <${1} >${1%.*}' sh {} \; \
   && nginx -g "daemon off;"
 
 WORKDIR /var/www/html
