feat: support for single-web containers for m2

--- a/templates/environments/includes/nginx.base.yml
+++ b/templates/environments/includes/nginx.base.yml
@@ -1,4 +1,5 @@
 version: "3.5"
+{{if not (isEnabledStrict .reward_single_web_container)}}
 services:
   nginx:
     hostname: "{{.reward_env_name}}-nginx"
@@ -17,3 +18,4 @@ services:
       - ./{{default ".reward/nginx/" .nginx_custom_configs_path}}:/etc/nginx/snippets/
     environment:
       - XDEBUG_CONNECT_BACK_HOST=${XDEBUG_CONNECT_BACK_HOST:-''}
+{{end}}
