--- a/templates/environments/includes/nginx.windows.yml
+++ b/templates/environments/includes/nginx.windows.yml
@@ -1,5 +1,7 @@
 version: "3.5"
+{{if not (isEnabledStrict .reward_single_web_container)}}
 services:
   nginx:
     environment:
       - XDEBUG_CONNECT_BACK_HOST={{default "host.docker.internal" .xdebug_connect_back_host}}
+{{end}}
