--- a/templates/environments/magento2/magento2.base.yml
+++ b/templates/environments/magento2/magento2.base.yml
@@ -1,9 +1,11 @@
 version: "3.5"
 services:
+{{if not (isEnabledStrict .reward_single_web_container)}}
   nginx:
     environment:
       - NGINX_PUBLIC=/pub
       - NGINX_TEMPLATE=magento2[.]conf
+{{end}}
 
   php-fpm:
     labels:
@@ -15,3 +17,8 @@ services:
             && (Path(`/livereload.js`) || Path(`/livereload`))
       - traefik.http.routers.{{.reward_env_name}}-livereload.service={{.reward_env_name}}-livereload
       - traefik.http.services.{{.reward_env_name}}-livereload.loadbalancer.server.port=35729
+{{if (isEnabledStrict .reward_single_web_container)}}
+    environment:
+      - NGINX_PUBLIC=/pub
+      - NGINX_TEMPLATE=magento2[.]conf
+{{end}}
