--- a/templates/environments/magento2/magento2.darwin.yml
+++ b/templates/environments/magento2/magento2.darwin.yml
@@ -8,7 +8,9 @@ x-environment: &environment
   - CHOWN_DIR_LIST=pub/media
 
 services:
+{{if not (isEnabledStrict .reward_single_web_container)}}
   nginx: { volumes: *volumes }
+{{end}}
   php-fpm: { volumes: *volumes, environment: *environment }
   php-debug: { volumes: *volumes, environment: *environment }
 
