--- a/templates/environments/magento2/magento2.mutagen.yml
+++ b/templates/environments/magento2/magento2.mutagen.yml
@@ -28,3 +28,8 @@ sync:
     permissions:
       defaultFileMode: "0644"
       defaultDirectoryMode: "0755"
+{{if (isEnabledStrict .reward_single_web_container)}}
+      defaultOwner: "id:{{default 1000 .reward_uid}}"
+      defaultGroup: "id:{{default 1000 .reward_gid}}"
+{{end}}
+
