--- a/images/php-fpm/magento2-web/context/etc/nginx/conf.d/default.conf.template
+++ b/images/php-fpm/magento2-web/context/etc/nginx/conf.d/default.conf.template
@@ -1,7 +1,7 @@
 # default Docker DNS server
 resolver 127.0.0.11;
 
-# Select upstream backend to use based on presense of Xdebug cookies and Blackfire headers
+# Select upstream backend to use based on presence of Xdebug cookies and Blackfire headers
 map "$http_X_BLACKFIRE_QUERY:$cookie_XDEBUG_SESSION$cookie_XDEBUG_PROFILE$cookie_XDEBUG_TRACE" $fastcgi_backend {
     # Nothing for debug and nothing for blackfire means its a pure request
     ":" ${NGINX_UPSTREAM_HOST}:${NGINX_UPSTREAM_PORT};
