--- a/templates/environments/includes/db.base.yml
+++ b/templates/environments/includes/db.base.yml
@@ -20,7 +20,7 @@ services:
       - --explicit_defaults_for_timestamp=on
 {{if ge 10.5 .mariadb_version}}
       - --log-bin-trust-function-creators=on
-{{end}
+{{end}}
 {{if eq (default "" .mysql_character_set_server) ""}}
       - --character-set-server=utf8mb4
 {{else}}
