feature: add support for reachability across reward environments with TRAEFIK_EXTRA_HOSTS variable

--- a/templates/environments/includes/blackfire.base.yml
+++ b/templates/environments/includes/blackfire.base.yml
@@ -6,8 +6,14 @@ x-volumes: &volumes
   - .{{default "" .reward_web_root}}/:/var/www/html:cached
 
 x-extra_hosts: &extra_hosts
-    - {{.traefik_domain}}:{{default "0.0.0.0" .traefik_address}}
-    - {{default "app" .traefik_subdomain}}.{{.traefik_domain}}:{{default "0.0.0.0" .traefik_address}}
+  - {{.traefik_domain}}:{{default "0.0.0.0" .traefik_address}}
+  - {{default "app" .traefik_subdomain}}.{{.traefik_domain}}:{{default "0.0.0.0" .traefik_address}}
+{{if .traefik_extra_hosts}}
+{{$traefik_address := default "0.0.0.0" .traefik_address}}
+{{range (stringSplit .traefik_extra_hosts " ")}}
+  - {{.}}:{{$traefik_address}}
+{{end}}
+{{end}}
 
 services:
   php-blackfire:
